kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-domain
  labels:
    name: demo-domain
